feat: reported changes from branch 8.1-jdk17 (#231)